--- a/ghini_fe/src/App.css
+++ b/ghini_fe/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+ 
 }
 
 .App-logo {
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: linear-gradient(120deg,#d7dfe4, #3e3941);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,3 +37,7 @@
     transform: rotate(360deg);
   }
 }
+.logoBox{
+  height:100px;
+}
+
