--- a/ghini_fe/src/Components/CSS/Nav.module.css
+++ b/ghini_fe/src/Components/CSS/Nav.module.css
@@ -21,7 +21,7 @@
 .links-container {
     margin-right: 20px;
     display: flex;
-    width: 40%;
+    width: 50%;
     justify-content: space-evenly;
 }
 
@@ -34,3 +34,19 @@
     text-decoration: none;
     color: rgba(14, 34, 14, 0.8);
 }
+.cart {
+    cursor: pointer;
+  }
+  .cart span:nth-child(1) {
+    font-size: 2rem;
+    color: white;
+  }
+  .cart span:nth-child(2) {
+    padding: 0 3px;
+    background-color: red;
+    color: white;
+    font-weight: bolx;
+    border-radius: 5px;
+    position: relative;
+    top: -15px;
+  }
