--- a/ghini_fe/src/Components/CSS/ProductCard.css
+++ b/ghini_fe/src/Components/CSS/ProductCard.css
@@ -82,8 +82,8 @@
   
   .product .popup-view{
     z-index: 2;
-    background: rgba(18, 10, 10, 0.5);
-    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    position: sticky;
     top: 0;
     right: 0;
     bottom: 0;
