--- a/ghini_fe/src/index.css
+++ b/ghini_fe/src/index.css
@@ -11,3 +11,57 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar {
+  width: 100%;
+  height: 70px;
+  background: #F7F7F7;
+  border-bottom: 1px solid #555;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo-container {
+  margin-left: 80px;
+  margin-top: 5px;
+}
+
+.logo-container span {
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.links-container {
+  margin-right: 20px;
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+}
+
+.link a {
+  text-decoration: none;
+  color: rgb(14, 34, 14);
+}
+
+.link a:hover {
+  text-decoration: none;
+  color: rgba(14, 34, 14, 0.8);
+}
+
+.cart {
+  cursor: pointer;
+}
+.cart span:nth-child(1) {
+  font-size: 2rem;
+  color: white;
+}
+.cart span:nth-child(2) {
+  padding: 0 3px;
+  background-color: red;
+  color: white;
+  font-weight: bolx;
+  border-radius: 5px;
+  position: relative;
+  top: -15px;
+}
