--- a/ghini_fe/src/Components/CSS/LogInForm.css
+++ b/ghini_fe/src/Components/CSS/LogInForm.css
@@ -1,4 +1,4 @@
-.center{
+.center3{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -8,21 +8,21 @@
   border-radius: 10px;
   box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
 }
-.center h1{
+.center3 h1{
   text-align: center;
   padding: 20px 0;
   border-bottom: 1px solid silver;
 }
-.center form{
+.center3 form{
   padding: 0 40px;
   box-sizing: border-box;
 }
-form .txt_field{
+form .txt_field3{
   position: relative;
   border-bottom: 2px solid #adadad;
   margin: 30px 0;
 }
-.txt_field input{
+.txt_field3 input{
   width: 100%;
   padding: 0 5px;
   height: 40px;
@@ -31,7 +31,7 @@ form .txt_field{
   background: none;
   outline: none;
 }
-.txt_field label{
+.txt_field3 label{
   position: absolute;
   top: 50%;
   left: 5px;
@@ -41,7 +41,7 @@ form .txt_field{
   pointer-events: none;
   transition: .5s;
 }
-.txt_field span::before{
+.txt_field3 span::before{
   content: '';
   position: absolute;
   top: 40px;
@@ -51,21 +51,21 @@ form .txt_field{
   background: #2691d9;
   transition: .5s;
 }
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
+.txt_field3 input:focus ~ label,
+.txt_field3 input:valid ~ label{
   top: -5px;
   color: #2691d9;
 }
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
+.txt_field3 input:focus ~ span::before,
+.txt_field3 input:valid ~ span::before{
   width: 100%;
 }
-.pass{
+.pass3{
   margin: -5px 0 20px 5px;
   color: #a6a6a6;
   cursor: pointer;
 }
-.pass:hover{
+.pass3:hover{
   text-decoration: underline;
 }
 input[type="submit"]{
@@ -84,19 +84,20 @@ input[type="submit"]:hover{
   border-color: #2691d9;
   transition: .5s;
 }
-.signup_link{
+.signup_link3{
   margin: 30px 0;
   text-align: center;
   font-size: 16px;
   color: #666666;
 }
-.signup_link a{
+.signup_link3 a{
   color: #2691d9;
   text-decoration: none;
 }
-.signup_link a:hover{
+.signup_link3 a:hover{
   text-decoration: underline;
 }
-.error{
+.error3{
   color : red;
+  font-size: 18px;
 }
