--- a/ghini_fe/src/Components/CSS/UpdateBikeForm.css
+++ b/ghini_fe/src/Components/CSS/UpdateBikeForm.css
@@ -57,9 +57,9 @@ body{
   left: 40%;
   
 }
-.center{
-  position: fixed;
-  top: 6%;
+.center6{
+  position: absolute;
+  top: 100%;
   left: 20%;
   transform: translate(-50%, -50%);
   width:600px;
@@ -67,13 +67,13 @@ body{
   border-radius: 10px;
   box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
 }
-  .center h2{
+  .center6 h2{
     font-family: "Copperplate","Papyrus", fantasy;
     text-align: center;
     padding: 20px 0;
     border-bottom: 1px solid silver;
   }
-  .center form{
+  .center6 form{
     padding: 0 40px;
     box-sizing: border-box;
   }
