--- a/ghini_fe/src/Components/CSS/DataTable.css
+++ b/ghini_fe/src/Components/CSS/DataTable.css
@@ -59,7 +59,8 @@ body{
 }
 .centerD{
   position: absolute;
-  top: 82%; 
+  margin-top: 125px;
+  top: 90%; 
   left: 50%;
   transform: translate(-50%, -50%);
   width:80%;
